ext link after all this time... hours wasted

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.svg" />
-    <link rel="icon" href="./favicon.ico" />
-    <link rel="mask-icon" href="favicon.svg" color="#000000" />
-
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="Description" content="Frespo" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Frespo" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="https://i.ibb.co/dD4SZzQ/favicon512.png"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      sizes="192x192"
+      href="https://i.ibb.co/dD4SZzQ/favicon512.png"
+    />
+    <link rel="icon" href="/icons/favicon.svg" />
+    <link rel="icon" href="/icons/favicon.ico" />
+    <link rel="mask-icon" href="icons/favicon.svg" color="#000000" />
 
     <meta
       http-equiv="Cache-Control"
@@ -15,20 +30,7 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
 
-    <!-- Apple Stuff -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-    <link rel="apple-touch-startup-image" href="apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Frespo" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="manifest.webmanifest" />
     <title>Frespo</title>
     <script id="react-dotenv" src="./env.js"></script>
