--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 
+    <!-- <link rel="manifest" href="manifest.webmanifest" /> -->
     <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="canonical" href="https://frespo.epizy.com/home" />
     <title>Frespo</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
